# N-Body

./: README.md
Implementation/: Summary.txt
Implementation/Barnes_Hut_Parallel/: CMakeLists.txt  ConfigFileParser.cpp  Doxyfile  InitialConditions.cpp  InitialConditions.h  Makefile  Makefile.gprof  OctoTree_Parallel.cpp  OctoTree_Parallel.h  OctoTree_Serial.cpp  Writter.cpp  Writter.h  barnes_hut_par  bhp_100000_100_16.out  bhp_10000_100_16.out  bhp_1000_100_16.out  bhp_1000_100_2.out  bhp_1000_100_32.out  bhp_1000_100_4.out  bhp_1000_100_48.out  bhp_1000_100_64.out  bhp_1000_100_8.out  bhp_100_100_16.out  bhp_100_100_16_gprof.out  bhp_125_100_2.out  bhp_125_100_4.out  bhp_2000_100_16.out  bhp_2000_100_2.out  bhp_2000_100_32.out  bhp_2000_100_4.out  bhp_2000_100_48.out  bhp_2000_100_64.out  bhp_2000_100_8.out  bhp_250_100_4.out  bhp_250_100_8.out  bhp_3000_100_16.out  bhp_3000_100_2.out  bhp_3000_100_32.out  bhp_3000_100_4.out  bhp_3000_100_48.out  (+106 more)
Implementation/Barnes_Hut_Sequential/: CMakeLists.txt  Cell.cpp  Cell.h  ConfigFileParser.h  FileNotFoundException.h  FileParserException.h  Makefile  OctoTree_Serial.cpp  OctoTree_Serial.h  Particle.cpp  Particle.h  barnes_hut_seq  bhs_100000_100.out  bhs_10000_100.out  bhs_1000_100.out  bhs_100_100.out  bhs_10_100.out  bhs_1500_100.out  bhs_2000_100.out  bhs_200_100.out  bhs_300_100.out  bhs_400_100.out  bhs_500_100.out  bhs_50_100.out  gmon.out  input_options_100000_100.txt  input_options_10000_100.txt  input_options_1000_100.txt  input_options_100_100.txt  input_options_100_100_gprof.txt  input_options_10_100.txt  input_options_1500_100.txt  input_options_2000_100.txt  input_options_200_100.txt  input_options_300_100.txt  input_options_400_100.txt  input_options_500_100.txt  input_options_50_100.txt  main.cpp  profiling.txt  (+24 more)
Implementation/Direct_Sum/: Makefile  energy.py  gmon.out  initial.c  initial.h  main_direct.c  main_direct.x  profiling_direct.txt  stats.py  t_evol.c  t_evol.h
Implementation/Plots/: Plotting_Timings_Performance.ipynb
Notes/: Readme.md
(+1 files in other folders)
